<resources>
    <string name="app_name">MobileLock</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="time_span">"Time span: "</string>

    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <!-- label for usage time -->
    <string name="usage_time_label">Usage time</string>
    <string name="web_client_id">293696815352-ob9lk5ng8sl7rune8e2kb57cijb69n9e.apps.googleusercontent.com</string>
    <string name="button">Button</string>
    <string name="click_to_activate">Click to Activate</string>
    <string name="home">Home</string>

    <string-array name="languages">
        <item>Home</item>
        <item>Application Screen</item>
        <item>Weekly Outlook</item>
        <item>Usage Breakdown</item>
    </string-array>
    <string name="title_activity_weekly_outlook">weekly_outlook</string>
    <string name="weekly_outlook">Weekly Outlook</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!--OAuth Constants-->
    <string name="SHARED_PREFERENCES_NAME">AUTH_STATE_PREFERENCE</string>
    <string name="AUTH_STATE">AUTH_STATE</string>
    <string name="SCOPE_PROFILE">profile</string>
    <string name="SCOPE_EMAIL">email</string>
    <string name="SCOPE_OPENID">openid</string>
    <string name="SCOPE_DRIVE">https://www.googleapis.com/auth/drive</string>
    <string name="SCOPE_CALENDAR">https://www.googleapis.com/auth/calendar</string>


    <string name="DATA_PICTURE">picture</string>
    <string name="DATA_FIRST_NAME">given_name</string>
    <string name="DATA_LAST_NAME">family_name</string>
    <string name="DATA_EMAIL">email</string>

    <string name="CLIENT_ID">293696815352-vrkmgdco2q5de9h39hv7ndf4780uk4m1.apps.googleusercontent.com</string>
    <string name="CODE_VERIFIER_CHALLENGE_METHOD">S256</string>
    <string name="MESSAGE_DIGEST_ALGORITHM">SHA-256</string>

    <string name="URL_AUTHORIZATION">https://accounts.google.com/o/oauth2/auth</string>
    <string name="URL_TOKEN_EXCHANGE">https://oauth2.googleapis.com/token</string>
    <string name="URL_AUTH_REDIRECT">com.example.mobilelock:/oauth2redirect</string>
    <string name="URL_API_CALL">https://www.googleapis.com/drive/v2/files</string>
    <string name="URL_LOGOUT">https://accounts.google.com/o/oauth2/revoke?token=</string>

    <string name="URL_LOGOUT_REDIRECT">com.example.mobilelock:/logout</string>
    <string name="usage_breakdown">Usage Breakdown</string>
    <string name="applications">Applications</string>

</resources>