<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeeklyOutlook">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:contentDescription="@string/action_settings"
        android:minHeight="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:text="@string/weekly_outlook"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ProgressBar
        android:id="@+id/sundayBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="236dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:max="24"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="28dp"
        android:text="@string/saturday"
        android:textColor="#B5673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/saturdayBar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ProgressBar
        android:id="@+id/thursdayBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:max="24"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="28dp"
        android:text="@string/sunday"
        android:textColor="#B5673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sundayBar"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/saturdayBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:max="24"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginBottom="28dp"
        android:text="@string/wednesday"
        android:textColor="#B5673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wednesdayBar"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/mondayBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:max="24"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginBottom="28dp"
        android:text="@string/friday"
        android:textColor="#B5673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fridayBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="28dp"
        android:text="@string/thursday"
        android:textColor="#B5673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/thursdayBar"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/tuesdayBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:max="24"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="28dp"
        android:text="@string/monday"
        android:textColor="#B5673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mondayBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="28dp"
        android:text="@string/tuesday"
        android:textColor="#B5673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tuesdayBar"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/fridayBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:max="24"/>

    <ProgressBar
        android:id="@+id/wednesdayBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:max="24"/>

</androidx.constraintlayout.widget.ConstraintLayout>